--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="styles.css">
   <title>Página de inicio</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>Bienvenido a mi página</h1>
-  <div>
-    <a href="terminos.html">Términos de servicio</a>
-    <a href="privacidad.html">Políticas de privacidad</a>
+  <div class="container">
+    <a class="button" href="terminos.html">Términos de servicio</a>
+    <a class="button" href="privacidad.html">Políticas de privacidad</a>
   </div>
 </body>
 </html>
