--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 <body>
   <h1>Bienvenido a mi página</h1>
   <div class="container">
+    <div class="bot-section">
+      <img src="zack-avatar.png" alt="Zack Avatar" class="bot-avatar">
+      <h2>Zack, tu bot de Discord</h2>
+      <p>
+        ¡Hola! Soy Zack, una bot multifacética y estoy aquí para entretener y ayudarte en tu servidor de Discord. Reproduzco música, soy una mod dedicada y estoy en constante desarrollo para agregar nuevas características. También disfruto de los memes y estoy dispuesta a jugar contigo y tus amigos. ¡Hagamos de tu servidor un lugar genial para pasar el rato! 💫
+      </p>
+    </div>
     <a class="button" href="terminos.html">Términos de servicio</a>
     <a class="button" href="privacidad.html">Políticas de privacidad</a>
   </div>
