--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Página de inicio</title>
+  <title>Zack</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
