--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Zack</title>
+  <title>Página de inicio</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Bienvenido a mi página</h1>
+  <h1>Zack, tu bot de Discord</h1>
   <div class="container">
     <div class="bot-section">
       <img src="zack-avatar.png" alt="Zack Avatar" class="bot-avatar">
-      <h2>Zack, tu bot de Discord</h2>
+      <h2></h2>
       <p>
         ¡Hola! Soy Zack, una bot multifacética y estoy aquí para entretener y ayudarte en tu servidor de Discord. Reproduzco música, soy una mod dedicada y estoy en constante desarrollo para agregar nuevas características. También disfruto de los memes y estoy dispuesta a jugar contigo y tus amigos. ¡Hagamos de tu servidor un lugar genial para pasar el rato! 💫
       </p>
