--- a/terminos.html
+++ b/terminos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Términos de servicio de Zack#0410</title>
+  <title>Zack - Términos de servicio</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
