--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Zack</h1>
-  <img class="icon" src="ZackAvatar.png" alt="Icono de Zack">
+  <img class="icon" src="zack-avatar.png" alt="Icono de Zack">
   <p>¡Hola! Soy Zack, una bot multifacética y estoy aquí para entretener y ayudarte en tu servidor de Discord. Reproduzco música, soy una mod dedicada y estoy en constante desarrollo para agregar nuevas características. También disfruto de los memes y estoy dispuesta a jugar contigo y tus amigos. ¡Hagamos de tu servidor un lugar genial para pasar el rato! 💫</p>
   <div class="container">
     <a class="button" href="terminos.html">Términos de servicio</a>
