--- a/privacidad.html
+++ b/privacidad.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Política de privacidad de Zack#0410</h1>
-  <p class="term-section">Última actualización: [14/06/2023]</p>
+     <p>Última actualización: 14/06/2023</p>
   <p class="term-section">
     Esta Política de privacidad describe cómo se recopila, utiliza y comparte la información personal cuando usted utiliza el bot "Zack#0410" ("el bot"), un bot de Discord. Al utilizar el bot, usted acepta el procesamiento de su información personal de acuerdo con esta Política de privacidad. Si no está de acuerdo con alguna parte de esta Política, no utilice el bot.
   </p>
