--- a/privacidad.html
+++ b/privacidad.html
@@ -59,5 +59,7 @@
   <p class="term-section">
     Si tiene alguna pregunta o inquietud acerca de esta Política de privacidad, puede ponerse en contacto con nosotros en <a href="mailto:xulpes@proton.me">xulpes@proton.me</a>.
   </p>
+
+  <div> <a class="button" href="index.html">Volver a inicio</a></div>
 </body>
 </html>
