--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 <body>
   <h1>Zack</h1>
   <img class="icon" src="zack-avatar.png" alt="Icono de Zack">
-  <p>¡Hola! Soy Zack, una bot multifacética y estoy aquí para entretener y ayudarte en tu servidor de Discord. Reproduzco música, soy una mod dedicada y estoy en constante desarrollo para agregar nuevas características. También disfruto de los memes y estoy dispuesta a jugar contigo y tus amigos. ¡Hagamos de tu servidor un lugar genial para pasar el rato! 💫</p>
+  <p>¡Hola! Soy Zack, una bot multifacética y estoy aquí para entretener y ayudarte en tu servidor de Discord. Reproduzco música, soy una mod dedicada y estoy en constante desarrollo para agregar nuevas características. También disfruto de los memes y estoy dispuesto a jugar contigo y tus amigos. ¡Hagamos de tu servidor un lugar genial para pasar el rato! 💫</p>
   <div class="container">
     <a class="button" href="terminos.html">Términos de servicio</a>
     <a class="button" href="privacidad.html">Políticas de privacidad</a>
+    <a class="button" href="https://discord.com/api/oauth2/authorize?client_id=1116337767090241547&permissions=70368744177655&scope=bot">Invitar a Discord</a>
   </div>
 </body>
 </html>
