--- a/terminos.html
+++ b/terminos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> Zack -Términos de servicio de "Zack#0410"</title>
+  <title>Términos de servicio de "Zack#0410"</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
