Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div id="login">
-        <h1>Bienvenidos al mundo de Sleep</h1>
-        <input type="password" id="password" placeholder="Ingresa la contraseña"/>
+        <h1>Sleep</h1>
+        <input type="password" id="password" placeholder=""/>
         <button onClick="checkPassword()">Ingresar</button>
     </div>
     <div id="main-content" style="display:none;">
