Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -1,43 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Sleep</title>
+    <title>Sleep - Mundo Minecraft</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="script.js"></script>
 </head>
 <body>
     <div id="login">
         <h1>Sleep</h1>
-        <input type="password" id="password" placeholder=""/>
+        <input type="password" id="password" placeholder="Ingresa la contraseña"/>
         <button onClick="checkPassword()">Ingresar</button>
     </div>
     <div id="main-content" style="display:none;">
         <header>
             <h1>Sleep</h1>
-            <nav>
-                <ul>
-                    <li><a href="#miembros">Miembros</a></li>
-                    <li><a href="#anime">Anime</a></li>
-                    <li><a href="#minecraft">Minecraft</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
-                </ul>
-            </nav>
         </header>
-        <section id="miembros">
-            <h2>Nuestros Miembros</h2>
-            <!-- Información de los miembros aquí -->
+        <section id="leyenda">
+            <h2>Estamos construyendo un nuevo mundo.</h2>
+            <p>Un mundo donde solo el Minecraft existe.</p>
         </section>
-        <section id="anime">
-            <h2>Anime</h2>
-            <!-- Contenido de Anime aquí -->
-        </section>
-        <section id="minecraft">
-            <h2>Minecraft</h2>
-            <!-- Contenido de Minecraft aquí -->
-        </section>
-        <section id="contacto">
-            <h2>Contacto</h2>
-            <!-- Información de contacto aquí -->
+        <section id="contador">
+            <h2>Nuestra misión no tiene fin:</h2>
+            <div id="infinito"></div>
         </section>
     </div>
 </body>
