Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
         </header>
         <section id="leyenda">
             <h2>Estamos construyendo un nuevo mundo.</h2>
-            <p>Un mundo donde solo el Minecraft existe.</p>
+            <p>Un mundo donde solo el Minecraft existe. Un mundo donde los sueños se hacen realidad.</p>
         </section>
         <section id="contador">
             <h2>Nuestra misión no tiene fin:</h2>
-            <div id="infinito"></div>
+            <div id="infinito">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 25">
+                    <path d="M 10,12.5 Q 25,25 40,12.5 Q 25,0 10,12.5" fill="none" stroke="lime" stroke-width="2"/>
+                </svg>
+            </div>
         </section>
     </div>
 </body>
