--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="login">
-        <h1>Sleep</h1>
+        <h1>Bienvenidos al mundo de Sleep</h1>
         <input type="password" id="password" placeholder="Ingresa la contraseña"/>
         <button onClick="checkPassword()">Ingresar</button>
     </div>
@@ -21,11 +21,7 @@
         </section>
         <section id="contador">
             <h2>Nuestra misión no tiene fin:</h2>
-            <div id="infinito">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 25">
-                    <path d="M 10,12.5 Q 25,25 40,12.5 Q 25,0 10,12.5" fill="none" stroke="lime" stroke-width="2"/>
-                </svg>
-            </div>
+            <div id="infinito">∞</div>
         </section>
     </div>
 </body>
