Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Sleep - Mundo Minecraft</title>
+    <title>Sleep</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="script.js"></script>
 </head>
 <body>
     <div id="login">
-        <h1>Bienvenidos al mundo de Sleep</h1>
+        <h1>Sleep</h1>
         <input type="password" id="password" placeholder="Ingresa la contraseña"/>
         <button onClick="checkPassword()">Ingresar</button>
     </div>
