Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <title>Sleep</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <script src="script.js"></script>
 </head>
 <body>
     <div id="login">
@@ -17,12 +16,13 @@
         </header>
         <section id="leyenda">
             <h2>Estamos construyendo un nuevo mundo.</h2>
-            <p>Un mundo donde solo el Minecraft existe. Un mundo donde los sueños se hacen realidad.</p>
+            <p>Un mundo donde solo el Minecraft existe.</p>
         </section>
         <section id="contador">
             <h2>Nuestra misión no tiene fin:</h2>
-            <div id="infinito">∞</div>
+            <div id="clock">00:00:00</div>
         </section>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
