Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div id="login">
         <h1>Sleep</h1>
         <input type="password" id="password" placeholder=""/>
-        <button onClick="checkPassword()">       </button>
+        <button onClick="checkPassword()">‎ ‎ ‎ ‎ ‎ ‎ </button>
     </div>
     <div id="main-content" style="display:none;">
         <header>
