--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <title>Sleep</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+
+    <!-- Etiquetas Open Graph -->
+    <meta property="og:title" content="Sleep - Nuevo mundo de Minecraft">
+    <meta property="og:description" content="Estamos construyendo un nuevo mundo donde solo el Minecraft existe.">
+    <meta property="og:image" content="URL_DEL_LOGO_DE_TU_PAGINA">
+    <meta property="og:url" content="hisleep.github.io">
 </head>
 <body>
     <div id="login">
