--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Etiquetas Open Graph -->
     <meta property="og:title" content="Sleep - Nuevo mundo de Minecraft">
     <meta property="og:description" content="Estamos construyendo un nuevo mundo donde solo el Minecraft existe.">
-    <meta property="og:image" content="URL_DEL_LOGO_DE_TU_PAGINA">
+    <meta property="og:image" content="https://raw.githubusercontent.com/HiSleep/hisleep.github.io/main/Captura.PNG?token=GHSAT0AAAAAACEGADHNJI6DPA2YM3SJUGWMZESYY6Q">
     <meta property="og:url" content="hisleep.github.io">
 </head>
 <body>
