--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 
     <!-- Etiquetas Open Graph -->
-    <meta property="og:title" content="Sleep - Nuevo mundo de Minecraft">
+    <meta property="og:title" content="Team Sleep">
     <meta property="og:description" content="Estamos construyendo un nuevo mundo donde solo el Minecraft existe.">
     <meta property="og:image" content="https://raw.githubusercontent.com/HiSleep/hisleep.github.io/main/Captura.PNG">
     <meta property="og:url" content="hisleep.github.io">
